src/qml/qml/qqmlbinding_p.h
@@ -115,6 +115,10 @@ public:
     };
 
     QVariant evaluate();
+    bool evaluate(void *result, QMetaType type)
+    {
+        return QQmlJavaScriptExpression::evaluate(&result, &type, 0);
+    }
 
     void expressionChanged() override;
 
@@ -150,10 +154,6 @@ protected:
                    QQmlPropertyData::WriteFlags flags);
 
     QV4::ReturnedValue evaluate(bool *isUndefined);
-    bool evaluate(void *result, QMetaType type)
-    {
-        return QQmlJavaScriptExpression::evaluate(&result, &type, 0);
-    }
 
 private:
     inline bool updatingFlag() const;
